Edit Wellness 2 page Template

--- a/templates/wellness-2.html
+++ b/templates/wellness-2.html
@@ -16,12 +16,12 @@
 	  {% include_dnd_partial
 	    path='../sections/hero-2.html',
 	    context={
-        'backgroundImage': 'https://atsistem.rs/hs-fs/hubfs/Lady%20in%20Spa.jpg?width=2000&height=888.1944444444443',
+        'backgroundImage': 'https://atsistem.rs/hubfs/Sadrzaj%20-%20Wellness/arkema.jpeg',
 			  'html': '
           <h1 class="hero-title">Oprema za wellness</h1>
           <p class="hero-subtitle">
-            Umirujući efekat tople vode i terapeutsko dejstvo masaže mogu značajno pomoći u ublažavanju i otklanjanju napetosti i stresa. 
-            Prilikom kupovine spa kade važno je odlučiti se za pouzdan brend i odabrati model koji dimenzijama i opremljenošću odgovara raspoloživom prostoru i potrebama.</p>
+            Na osnovu dugogodišnjeg iskustva u kreiranju različitih spa sadržaja, opredelili smo se za saradnju sa pouzdanim proizvođačima, ekspertima za kreiranje specifičnih i funkcionalnih tehničkih rešenja.
+          </p>
           <a class="button-secondary flex mt-2" href="/kontakt">Kontaktirajte nas</a>
         '
 	    }
@@ -41,19 +41,13 @@
             {% module_attribute 'html' %}
                 <h2 class="h4 font-bold">Oprema za wellness centre vrhunskog kvaliteta</h2>
                 <p class="mb-1">
-                  Nudimo odličan asortiman vodećeg francuskog brenda POSEIDON SPA, koji uključuje raznovrstan izbor ergonomskih,
-                  izdržljivih i sjajno opremljenih modela, predviđenih za spoljašnju ili unutrašnju instalaciju. Ove hidraulične kade mogu
-                  primiti od dve do sedam osoba, i opremljene su komfornim mestima za sedenje i ležanje, različličitim masažnim mlaznicama
-                  i efikasnim sistemom za dezinfekciju. Uživajte u <a class="underline" href="https://shop.atsistem.rs/sr/collections/komercijalne-spa-kade">hidromasažnim kadama za javni prostor</a> i svaki dom i efektima koji poboljšavaju relaksaciju i raspoloženje.
+                  Današnji način života, pogotovo u većim gradovima, nosi sa sobom gotovo svakodnevni stres, napetost, žurbu, nervozu. Zbog toga se ljudi rado okreću wellness i spa metodama koje pospešuju povraćaj svežine i blagostanja organizma, pomoću vode, zdravog načina života, svetlosti, izbalansirane dijete, masaže i duhovne relaksacije. To su zapravo metode koje su ljudi praktikovali od davnina, a danas ih unapređuju koristeći nova tehnološka dostignuća.
                 </p>
                 <p class="mb-1">
-                  AROMA TERAPIJA je terapija mirisnim aromama biljaka. Esencijalna ulja stimulišu autonomni nervni sistem, redukuju stres,
-                  anksioznost, i poboljšavaju san.
+                  Wellness i spa centri nude brojne sadržaje koji su namenjeni opuštanju uma i tela, i uspostavljanju opštu ravnotežu u organizmu, a u njih spadaju: bazeni, hidromasažne kade, parna kupatila , saune, slane sobe, tuševi, sobe za relaksaciju, prostorije za masažu, kozmetičke i antistres tretmane, fitnes,  itd.
                 </p>
                 <p class="mb-1">
-                  HROMOTERAPIJA je terapija bojama koje emituju LED spotovi postavljeni u mlaznicama, skimeru, slapu, ili držačima čaša.
-                  Cela kada je okupana bojama koje utiču na raspoloženje i u kombinaciji sa masažom daju inzvanredan efekat na relaksaciju
-                  celog tela. Čak je i spoljni kabinet kade diskretno osvetljen, što daje posebnu notu elegancije.
+                  A&T SISTEM izrađuje spa sadržaje za privatnu i komercijalnu upotrebu, tako da su među našim klijentima brojni hoteli, resorti, wellness i spa centri, ali ponekad i privatna lica koja žele da stvore sopstvene oaze za relaksaciju i uživanje.
                 </p>
               {% end_module_attribute %}
           {% end_dnd_module %}
@@ -71,8 +65,8 @@
           {
             "image_field": {
             "size_type": "auto",
-            "src": "https://26015966.fs1.hubspotusercontent-eu1.net/hubfs/26015966/salt-room.png",
-            "alt": "salt-room",
+            "src": "https://atsistem.rs/hubfs/Sadrzaj%20-%20Wellness/sauana%20harvia.jpg",
+            "alt": "Saune",
             "loading": "lazy",
             "width": 600,
             "height": 416,
@@ -81,12 +75,12 @@
             },
             "premium_product": false,
             "title": "Saune",
-            "description": "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing.",
+            "description": "Saune se tradicionalno koriste za uživanje, opuštanje i poboljšanja opšteg zdravstvenog stanja. Prilikom boravka u sauni, toplota pospešuje cirkulaciju krvi što dovodi do velike količine znojenja. Znojenje omogućava telu da se oslobodi štetnih materija i toksina, jača imuni sistem, opušta telo od napetosti i stresa. Boravak u sauni utiče blagotvorno, jer se nakon njega osećate bolje i svežije. Izrađujemo sve vrste sauna, koristeći najkvalitetnije drvo, saunske peći i kontrole. U ponudi imamo gotove saune, elegantnog dizajna, sa karakteristikama koje su u trendu: ekran osetljiv na dodir, hromoterapija i ultra brzo grejanje. Takođe pravimo saune po meri, sa upečatljivim dodacima od slanih cigli ili reljefnog kamena, staklenim panelima ili diskretnom LED rasvetom.",
             "link_field": {
               "url": {
                 "content_id": null,
                 "type": "EXTERNAL",
-                "href": ""
+                "href": "https://shop.atsistem.rs/sr/collections/saune"
               },
               "open_in_new_tab": false,
               "no_follow": false
@@ -96,8 +90,8 @@
           {
             "image_field": {
             "size_type": "auto",
-            "src": "https://26015966.fs1.hubspotusercontent-eu1.net/hubfs/26015966/salt-room.png",
-            "alt": "salt-room",
+            "src": "https://atsistem.rs/hubfs/Sadrzaj%20-%20Wellness/Parno%20Kupatilo.jpeg",
+            "alt": "Parna kupatila",
             "loading": "lazy",
             "width": 600,
             "height": 416,
@@ -106,12 +100,21 @@
             },
             "premium_product": false,
             "title": "Parna kupatila",
-            "description": "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing.",
+            "description": "
+              Parno ili tursko kupatilo je vrsta saune u kojoj je zastupljena visoka vlažnost vazduha koja se kreće do 100% i temperaturom od 40 do 50⁰ C.
+              Parna kupatila (kabine i klupe) pravimo od paronepropusnih ploča različite debljine. 
+              Obloga zidova i plafona je visokokvalitetni stakleni mozaik koji svojom lepotom i sjajem daje završni vizuelni pečat prostoru. 
+              Pored mozaika, i rasveta doprinosi savršenom ugođaju, a jedan od najtraženijih vidova rasvete je “zvezdano nebo”. 
+              Pod je od keramike ili staklenog mozaika koji ima antiklizna svojstva. 
+              Srce parnog kupatila je parogenerator, njegov kvalitet mora biti takav da omogućava bezbedno, dugotrajno funkcionisanje u uslovima svakodnevnog korišćenja. 
+              On se smešta u tehnički prostor pored parnog kupatila. 
+              Naša preporuka je parogenerator proizvođača WERNER DOSIERTECHNIC iz Nemačke, garantovano vrhunskog kvaliteta.
+            ",
             "link_field": {
               "url": {
                 "content_id": null,
                 "type": "EXTERNAL",
-                "href": ""
+                "href": "/"
               },
               "open_in_new_tab": false,
               "no_follow": false
@@ -131,8 +134,8 @@
           {
             "image_field": {
             "size_type": "auto",
-            "src": "https://26015966.fs1.hubspotusercontent-eu1.net/hubfs/26015966/salt-room.png",
-            "alt": "salt-room",
+            "src": "https://atsistem.rs/hubfs/Sadrzaj%20-%20Wellness/Slana%20Soba.jpg",
+            "alt": "Slane sobe",
             "loading": "lazy",
             "width": 600,
             "height": 416,
@@ -140,13 +143,15 @@
             "max_height": 416
             },
             "premium_product": false,
-            "title": "Slana soba",
-            "description": "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing.",
+            "title": "Slane sobe",
+            "description": "Slane sobe imaju veoma povoljan uticaj na zdravlje korisnika. Uz pomoć halogeneratora proizvodi se sitna slana magla koja ide u disajne puteve, apsorbuje se kroz kožu i omogućava direktan prijem delotvornih mineralnih soli. Vazduh, čist kao posle letnje oluje, čini da se nakon 20 minuta boravka u slanoj sobi relaksiramo kao nakon višečasovne šetnje duž morske obale
+              Slana soba može biti cela obložena solju, ili imati neke elemente soli i uređaj za haloterapiju. 
+            ",
             "link_field": {
               "url": {
                 "content_id": null,
                 "type": "EXTERNAL",
-                "href": ""
+                "href": "/"
               },
               "open_in_new_tab": false,
               "no_follow": false
@@ -156,8 +161,8 @@
           {
             "image_field": {
             "size_type": "auto",
-            "src": "https://26015966.fs1.hubspotusercontent-eu1.net/hubfs/26015966/salt-room.png",
-            "alt": "salt-room",
+            "src": "https://atsistem.rs/hubfs/Sadrzaj%20-%20Wellness/Tusevi%20dozivljaja.jpg",
+            "alt": "Tusevi dozivljaja",
             "loading": "lazy",
             "width": 600,
             "height": 416,
@@ -165,13 +170,13 @@
             "max_height": 416
             },
             "premium_product": false,
-            "title": "Grejanje i odvlaživanje",
-            "description": "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing.",
+            "title": "Tuševi doživljaja",
+            "description": "Tuševi doživljaja sa pratećim zvučnim efektima se nalaze u bolje opremljenim spa centrima i predstavljaju pravu relaksaciju za um i telo koju korisnici naprosto obožavaju. Nudimo više vrsta ovih tuševa nemačkog proizvođača WERNER DOSIERTECHNIC. Ovi tuševi apsolutno opravdavaju ulaganje u njihovu nabavku. Okrepljuju nas, stimulišu sva čula, smanjuju napetost u telu i utiču na bolju koncentraciju.",
             "link_field": {
               "url": {
                 "content_id": null,
                 "type": "EXTERNAL",
-                "href": "https://shop.atsistem.rs/sr/collections/grejanje-i-odvlazivanje"
+                "href": "/"
               },
               "open_in_new_tab": false,
               "no_follow": false
@@ -186,8 +191,8 @@
 			path='../sections/image-with-text.html',
       context={
         'image_field': {
-          "src": "https://atsistem.rs/hubfs/Sadrzaj%20Oprema/stakleni%20mozaik.jpg",
-          "alt": "Tople klupe",
+          "src": "https://atsistem.rs/hubfs/Sadrzaj%20-%20Wellness/SERENDIPITY%20NEVE%20BAITA%20Tople%20klupe.jpeg",
+          "alt": "Tople ležaljke",
           "size_type": "auto",
           "width": 725,
           "height": 500,
@@ -196,8 +201,14 @@
           "max_height": 500
         },
         'image_fit': 'cover',
-        'title': 'Tople klupe',
-        'description': 'Contrary to popular belief, Lorem Ipsum is not simplyrandom text. If you are going to use a passage of Lorem Ipsum, you need to be sure there.',
+        'title': 'Tople ležaljke',
+        'description': '
+          Ležaljke su predviđene za upotrebu u unutrašnjem i spoljašnjem prostoru. Zagrevaju se do 41 C, što je idealna temperatura da se telo zagreva bez znojenja, krvni sudovi šire, poboljšava protok krvi, jača imunitet. Zbog pozitivnog i umirujućeg uticaja na organizam, preporučuje se osobama svih starosnih dobi. Tople ležaljke su mobilne i zato su idealne za wellness centre. Izrađene su od 100% HD polietilena. Završna obrada imitira efekat kamena. 
+          <br>
+          <br>
+          Pored ovih, gotovih ležaljki, nudimo i izradu tepidarijuma, sa integrisanom grejnom mrežom i završnom oblogom od staklenog mozaika. 
+
+        ',
         'h_tag_choice': 'h3',
         'link_label': 'Pogledajte ponudu',
         'link': {
@@ -218,7 +229,10 @@
       context={
         'h_tag_choice': 'h3',
         'title': 'BWT komercijalne spa kade',
-        'description': 'Ekspert u proizvodnji opreme za rezidencijalne i javne bazene, koji svoje dugogodišnje znanje, iskustvo i kvalitet stavlja našim klijentima na raspolaganje, kada se radi o specifičnim sistemskim rešenjima, uz maksimalnu hidrauličku optimizaciju.',
+        'description': '
+          BWT komercijalne spa kade su pravi izbor za wellness centre koji svojim klijentima žele da omoguće uživanje u najboljim spa kadama sa hidromasažom i aeromasažom. Za filtraciju i održavanje besprekornog kvaliteta vode, uz kadu se instalira tehnika namenjena komercijalnoj upotrebi: filter, cirkulaciona pumpa, hidromasažne pumpe, kompresor, elektro-grejač, elektrokomandni uređaj sa 7 senzora, automatski uređaj za održavanje kvaliteta vode, itd.
+          <br><small class="mt-0.5">©photo creadit : BWT POOL PRODUCTS</small>
+          ',
         'link_label': 'Pogledajte ponudu',
         'link': {
           "url": {
@@ -231,8 +245,8 @@
         },
         'reverse_content_direction': false,
         'image_field': {
-          "src": 'https://atsistem.rs/hs-fs/hubfs/Sadrzaj%20Usluge/bwt_m11.jpg',
-          "alt": "BWT Pool Products",
+          "src": 'https://atsistem.rs/hubfs/Sadrzaj%20-%20Wellness/spas_m-Enhanced.jpg',
+          "alt": "BWT komercijalne spa kade",
           "size_type": "auto",
           "width": 725,
           "height": 360,
@@ -240,7 +254,7 @@
           "max_width": 725,
           "max_height": 360
         },
-        'image_fit': 'contain',
+        'image_fit': 'cover',
       }
     %}
 
@@ -248,7 +262,7 @@
 			path='../sections/image-with-text.html',
       context={
         'image_field': {
-          "src": "https://atsistem.rs/hubfs/Sadrzaj%20Oprema/stakleni%20mozaik.jpg",
+          "src": "https://atsistem.rs/hubfs/Sadrzaj%20-%20Wellness/mozaik-Enhanced.jpg",
           "alt": "Stakleni mozaik",
           "size_type": "auto",
           "width": 725,
@@ -259,7 +273,9 @@
         },
         'image_fit': 'cover',
         'title': 'Stakleni mozaik',
-        'description': 'Contrary to popular belief, Lorem Ipsum is not simplyrandom text. If you are going to use a passage of Lorem Ipsum, you need to be sure there.',
+        'description': '
+          Španski brend MOSAVIT je sinonim za kvalitet, vrhunski dizajn i najnoviju tehnologiju u proizvodnji staklenog mozaika. Preko 500 modela mozaika iz njihove kolekcije daje neograničene mogućnosti za dizajn enterijera.
+          Svi mozaici su na kvalitetnoj silikonskoj mrežici, koja omogućava laganu instalaciju i na najzahtevnijim mestima. Pored staklenog mozaika, MOSAVIT TRIP nudi fascinantan izbor obloga od prirodnog kamena i drveta, kao i originalnu kolekciju lavaboa.',
         'h_tag_choice': 'h3',
         'link_label': 'Pogledajte ponudu',
         'link': {
@@ -280,7 +296,18 @@
       context={
         'h_tag_choice': 'h3',
         'title': 'Usluge izgradnje wellness centara',
-        'description': 'Contrary to popular belief, Lorem Ipsum is not simplyrandom text. If you are going to use a passage of Lorem Ipsum, you need to be sure there.',
+        'description': 'Naš tim je na raspolaganju da vaše ideje pretvori u stvarnost. Nakon usvajanja kvalitetnog idejnog rešenja, projektovanje, izgradnja, opremanje i puštanje spa sadržaja u rad su naša briga. Uvek ostajemo na raspolaganju kao tehnička podrška, za održavanje i servis.',
+        'link_label': 'Pošaljite upit',
+        'link_field': {
+					"url": {
+						"content_id": null,
+						"type": "EXTERNAL",
+						"href": "/kontakt"
+					},
+					"open_in_new_tab": false,
+					"no_follow": false
+				}
+        
       }
 		%}
 
